--- a/styles/style.css
+++ b/styles/style.css
@@ -2,32 +2,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 /* common styles  */
-body{
+body {
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
+    margin: 0;
+}
+/* header section  */
+
+.header-container{
+    display: flex;
+    justify-content: space-between;
+    background-color: #562EFF;
+    padding: 21px 10px;
+}
+.header-logo{
+    display: flex;
+    align-items: center;
+}
+.header-logo h2{
+   margin-left: 16px;
+   color: #FFFFFF;
+   font-size: 24px;
+}
+
+.header-logo .logo img{
+    width: 40.42px;
+    height: 51px;
+}
+.header-menu{
+    display: flex;
+    align-items: center;
+}
+.menu-item a {
+    text-decoration: none;
+    padding-right:36px;
+    color: #FFFFFF;
 }
 
 /* top players styles or utilities */
-.section-title{
+.section-title {
     color: #562EFF;
     font-size: 24px;
     margin-top: 3px;
 }
-main{
+
+main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items:center;
 }
-.containers{
+
+.container {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    border-radius: 5px;
+    margin-top: 21px;
 }
-hr{
+
+hr {
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
-.top-players{
+
+.top-players {
     margin-bottom: 30px;
 }
+
 .players {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -43,7 +84,110 @@ hr{
     width: 56px;
     height: 56px;
 }
-.players-name{
+
+.players-name {
     margin-left: 16px;
     font-size: 18px;
+}
+
+/* top blogs styles */
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog .thumbnail img {
+    width: 177px;
+    height: 117px;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+
+.blog-title {
+    font-size: 20px;
+}
+
+.blog-author {
+    font-size: 16px;
+    color: #9F9F9F;
+}
+
+.blog-author a {
+    color: #562EFF;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+/* Latest Courses */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+.course-author{
+    color: #ED6B4F;
+}
+
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.course-info .ratings span{
+    color: #A2A2A2;
+}
+.course-info .course-duration{
+    background-color:  #FFE4E8;
+    border-radius: 14.6913px;
+    color: #FF4A60;
+}
+
+
+.course .course-banner img{
+    width: 224px;
+    height: 104px;
+}
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: rgba(174, 174, 174,0.25);
+}
+/* Media Queries */
+
+/* Mobile-devices */
+
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players,.blogs,.courses{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+}
+
+/* Tablet Devices */
+@media only screen and (min-width:688px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .players,.courses{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1,1fr);
+    }
 }
